@@ -8,8 +8,8 @@ return {
 		cruisealtitude = 90,
 		energycost = 8000,
 		explodeas = "mediumExplosionGeneric",
-		footprintx = 3,
-		footprintz = 3,
+		footprintx = 4,
+		footprintz = 4,
 		health = 1920,
 		idleautoheal = 5,
 		idletime = 1800,
