@@ -103,7 +103,7 @@ return {
 		},
 		weapondefs = {
 			armserp_weapon = {
-				areaofeffect = 16,
+				areaofeffect = 120,
 				avoidfeature = false,
 				avoidfriendly = false,
 				burnblow = true,
@@ -121,7 +121,7 @@ return {
 				range = 800,
 				reloadtime = 8,
 				soundhit = "xplodep1",
-				soundhitvolume = 22,
+				soundhitvolume = 14,
 				soundstart = "torpedo1",
 				startvelocity = 150,
 				tolerance = 8000,
@@ -134,9 +134,9 @@ return {
 				weapontype = "TorpedoLauncher",
 				weaponvelocity = 220,
 				damage = {
-					commanders = 750,
-					default = 1650,
-					subs = 1110,
+					commanders = 375,
+					default = 825,
+					subs = 555,
 				},
 			},
 		},
@@ -147,6 +147,14 @@ return {
 				maindir = "0 0.2 1",
 				maxangledif = 80,
 				onlytargetcategory = "NOTHOVER",
+			},
+			[2] = {
+				badtargetcategory = "HOVER NOTSHIP",
+				def = "ARMSERP_WEAPON",
+				maindir = "0 0.2 1",
+				maxangledif = 80,
+				onlytargetcategory = "NOTHOVER",
+				slaveto = 1,
 			},
 		},
 	},
