@@ -9,8 +9,8 @@ return {
 		cruisealtitude = 90,
 		energycost = 8200,
 		explodeas = "mediumexplosiongeneric",
-		footprintx = 3,
-		footprintz = 3,
+		footprintx = 4,
+		footprintz = 4,
 		health = 1960,
 		idleautoheal = 5,
 		idletime = 1800,
@@ -81,14 +81,14 @@ return {
 			},
 		},
 		weapondefs = {
-			armair_torpedo = {
-				areaofeffect = 16,
+			heavy_torpedo = {
+				areaofeffect = 150,
 				avoidfeature = false,
 				avoidfriendly = false,
 				burnblow = true,
-				burst = 3,
-				burstrate = 0.3,
-				cegtag = "torpedotrail-small",
+				--burst = 3,
+				--burstrate = 0.3,
+				cegtag = "torpedotrail-large",
 				collidefriendly = false,
 				craterareaofeffect = 0,
 				craterboost = 0,
@@ -97,13 +97,13 @@ return {
 				explosiongenerator = "custom:genericshellexplosion-large-uw",
 				flighttime = 4,
 				impulsefactor = 0.123,
-				model = "cortorpedo.s3o",
+				model = "coradvtorpedo.s3o",
 				mygravity = 0.1,
-				name = "Light homing torpedo launcher",
+				name = "Heavy homing torpedo launcher",
 				noselfdamage = true,
 				range = 400,
 				reloadtime = 8,
-				soundhit = "xplodep2",
+				soundhit = "xplodep1",
 				soundhitvolume = 3.5,
 				soundhitwet = "splsmed",
 				soundhitwetvolume = 14,
@@ -111,26 +111,26 @@ return {
 				startvelocity = 35,
 				tolerance = 2000,
 				tracks = true,
-				turnrate = 17000,
+				turnrate = 8000,
 				turret = false,
 				waterweapon = true,
 				weaponacceleration = 35,
-				weapontimer = 6,
+				weapontimer = 8,
 				weapontype = "TorpedoLauncher",
-				weaponvelocity = 200,
+				weaponvelocity = 160,
 				customparams = {
 					speceffect = "torpwaterpen",
 					when = "ypos<0",
 				},
 				damage = {
-					default = 500,
+					default = 1200,
 				},
 			},
 		},
 		weapons = {
 			[1] = {
 				badtargetcategory = "NOTSHIP",
-				def = "ARMAIR_TORPEDO",
+				def = "HEAVY_TORPEDO",
 				onlytargetcategory = "NOTHOVER",
 			},
 		},
